--- a/exercises/09-Beautify/index.html
+++ b/exercises/09-Beautify/index.html
@@ -9,28 +9,19 @@
 
 	<body>
 		<div>
-			<div id="div1">
-				<strong>The Menu</strong>
-			</div>
+			<div id="div1"><strong>The Menu</strong></div>
 			<div id="div2">
 				<strong><i>The Content</i></strong>
 			</div>
 			<div id="div3">
-				<div>
-					<strong><i>The Other Stuff</i></strong>
-				</div>
-
-				<div id="div4">
-					<strong>Second Content</strong>
-				</div>
-				<div id="div5">
-					<strong><i>Second Content</i></strong>
-				</div>
-				<div id="div3">
-					<div>
-						<strong><i>The Extra Stuff</i></strong>
-					</div>
-				</div>
+				<strong><i>The Other Stuff</i></strong>
+			</div>
+			<div id="div4"><strong>Second Content</strong></div>
+			<div id="div5">
+				<strong><i>Second Content</i></strong>
+			</div>
+			<div id="div6">
+				<strong><i>The Extra Stuff</i></strong>
 			</div>
 		</div>
 	</body>
